# docker-clash

./: .gitignore  Cargo.toml  Dockerfile  Dockerfile.builder  README.md  config.yaml  docker-compose.yaml  entrypoint.sh  pyproject.toml  summary.md  test.sh
.github/workflows/: docker.yml  dockerhub-description.yml
clashutil/: clash.py  cli.py
macros/: Cargo.toml
macros/src/: lib.rs
macros/tests/: tests.rs
src/: clash.rs  cli.rs  lib.rs  main.rs  sys.rs
