[package]
name = "docker-clash"
version = "0.1.0"
authors = ["navyd <dhjnavyd@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["macros"]


[dependencies]
iptables = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
sysctl = "0.4"
anyhow = "1.0"
structopt = "0.3"
which = "4.2"
once_cell = "1.8"
log = "0.4"
env_logger = "0.9"
users = "0.11"
cmd_lib = "1.1"
ctor = "0.1"
cmd_lib_core = "0.4"
getset = "0.1"
derive_builder = "0.10"

macros = { version = "0.1.0", path = "./macros" }
