[tool.poetry]
name = "clashutil"
version = "0.1.0"
description = ""
authors = ["navyd <dhjnavyd@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
psutil = "^5.8.0"
click = "^8.0.1"
PyYAML = "^5.4.1"
colorama = "^0.4.4"
tenacity = "^8.0.1"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
clashutil = "clashutil.cli:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
